--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@
 site_name: ERNI-KI Documentation
 site_description: "Документация проекта ERNI-KI - AI платформа с Open WebUI"
 site_author: "ERNI-KI Team"
-site_url: "https://docs.erni-ki.local"
+site_url: "https://docs.erni-gruppe.ch"
 
 # Репозиторий
 repo_name: "DIZ-admin/erni-ki"
