feat: comprehensive system update and documentation overhaul
- feat(logging): replace Elasticsearch with Loki for centralized logging
- feat(monitoring): migrate monitoring configs from monitoring/ to conf/
- feat(docs): update all documentation to reflect 29 ERNI-KI services
- feat(architecture): add Mermaid diagrams with current system state
- feat(api): document new SearXNG and Backrest API endpoints
- feat(config): add Loki configuration and webhook-receiver setup

- fix(cloudflare): resolve DNS resolution issues in tunnels
- fix(searxng): optimize API access through nginx proxy (<0.8s)
- fix(backrest): configure manual backup management via API
- fix(gpu): confirm NVIDIA Quadro P2200 functionality in Ollama

- docs: update README with latest optimizations (August 2025)
- docs: synchronize German localization (docs/de/)
- docs: add comprehensive validation procedures and rollback strategies
- docs: create services overview with 29 microservices details

- refactor: remove obsolete monitoring/ directory structure
- refactor: consolidate configurations under conf/ directory
- refactor: clean up temporary files and optimize .gitignore

- test: add AI models diagnostics and GPU monitoring tests
- test: update e2e tests for OpenWebUI RAG functionality

BREAKING CHANGE: Elasticsearch replaced with Loki, monitoring configs moved to conf/

--- a/.editorconfig
+++ b/.editorconfig
@@ -43,9 +43,29 @@ indent_size = 2
 indent_size = 2
 
 # Nginx конфигурация
-[*.conf]
+[nginx.conf]
 indent_size = 2
 
-# Конфигурационные файлы
+# Fluent Bit конфигурация - НЕ ИЗМЕНЯТЬ ОТСТУПЫ
+[conf/fluent-bit/*.conf]
+indent_style = space
+indent_size = 4
+# Отключаем автоформатирование для сохранения структуры
+trim_trailing_whitespace = false
+
+# Prometheus конфигурация
+[conf/prometheus/*.yml]
+indent_size = 2
+
+# Grafana конфигурация
+[conf/grafana/**/*.{yml,yaml,json}]
+indent_size = 2
+
+# Конфигурационные файлы общие
 [*.{ini,cfg,toml}]
 indent_size = 2
+
+# Специальные конфигурации сервисов - сохраняем как есть
+[conf/**/*.{conf,ini,cfg}]
+# Отключаем автоформатирование
+trim_trailing_whitespace = false
